--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 color-eyre = "0.6.3"
 crossterm = "0.27.0"
+dirs = "5.0.1"
 rand = "0.8.5"
 ratatui = "0.26.1"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
