--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ rand = "0.8.5"
 ratatui = "0.26.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+log = "0.4"
+simplelog = "0.12"
