--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "typirst"
-version = "0.1.0"
+version = "0.2.0"
+authors = ["Vasilis Tsiolkas"]
+description = "A tool for saving and restoring tmux sessions"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
